Fix spacing between place and subtitle

--- a/style.css
+++ b/style.css
@@ -108,6 +108,10 @@ header h2, header p {
   text-align: center;
 }
 
+.experiences h4 {
+  margin-right: 20px;
+}
+
 .experiences h4, .experiences h4 p, .experiences h5 {
   display: inline;
 }
